# window-scripts

./: .bumpversion.cfg  .gitignore  CHANGELOG.md  README.md  build_java.cmd  config.py  cp.cmd  download_tc.py  pyproject.toml  run.py  setup.cmd  test_solution.py
scripts/: build.cmd  build_java.cmd  build_kotlin.cmd  cptool.cmd  dl.cmd  run.cmd  setup.cmd  test.cmd
src/: version.py
src/cp_tool/: __init__.py  config.py  version.py
src/cp_tool/core/: __init__.py  downloader.py  runner.py  tester.py
template/: Main.java  Main.kt  Main.py  Template.java  debug.h  debugutil.h  template.cpp
