[tool.poetry]
name = "competitive-programming-tool"
version = "2.2.2"
description = "Tool for competitive programming"
authors = ["Huy Le <lqh1411@gmail.com>"]
packages = [
    { include = "cp_tool", from = "src" }
]

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.scripts]
cptool = "cp_tool.cli:main"

[tool.poetry.group.dev.dependencies]
bump2version = "^1.0.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api" 